--- a/app/assets/stylesheets/objects/_layout.scss
+++ b/app/assets/stylesheets/objects/_layout.scss
@@ -16,6 +16,11 @@
   max-width: 1920px;
   margin-left: auto;
   margin-right: auto;
+  
+  /* Allow overflow when dropdowns are open */
+  &:has([data-dropdown-open="true"]) {
+    overflow: visible;
+  }
 }
 
 /* Main content area */
@@ -26,6 +31,11 @@
   background-color: #000000;
   overflow: hidden;
   min-height: 0; /* Important for flex children */
+  
+  /* Allow overflow when dropdowns are open */
+  &:has([data-dropdown-open="true"]) {
+    overflow: visible;
+  }
 }
 
 /* Content area */
